tests/parsing/smtlib/v2.7/errors/060_declare-datatypes_unclosed_1.smt2
(set-logic ALL)
(declare-datatypes ((foo 0)) (((A))) _)
